--- a/src/main/resources/assets/theshapeshifterbyxboxscontentnw/lang/en_us.json
+++ b/src/main/resources/assets/theshapeshifterbyxboxscontentnw/lang/en_us.json
@@ -6,7 +6,7 @@
   "item.theshapeshifterbyxboxscontentnw.shapeshifter_killer_spawn_egg": "Shapeshifter Spawn Egg",
   "item.theshapeshifterbyxboxscontentnw.shapeshifter_on_wall_spawn_egg": "Shapeshifter On Wall Spawn Egg",
   "item.theshapeshifterbyxboxscontentnw.shapeshifter_flee_spawn_egg": "Shapeshifter Spawn Egg",
-  "entity.theshapeshifterbyxboxscontentnw.shapeshifter_fake": "Shapeshifter On Wall Fake PX",
-  "item.theshapeshifterbyxboxscontentnw.shapeshifter_fake_spawn_egg": "Shapeshifter On Wall Fake PX Spawn Egg",
+  "entity.theshapeshifterbyxboxscontentnw.shapeshifter_fake": "Shapeshifter On Wall Fake",
+  "item.theshapeshifterbyxboxscontentnw.shapeshifter_fake_spawn_egg": "Shapeshifter On Wall Fake Spawn Egg",
   "entity.theshapeshifterbyxboxscontentnw.shapeshifter_flee": "Shapeshifter"
 }
