--- a/src/main/resources/assets/theshapeshifterbyxboxscontentnw/lang/en_us.json
+++ b/src/main/resources/assets/theshapeshifterbyxboxscontentnw/lang/en_us.json
@@ -1,6 +1,7 @@
 {
   "item.theshapeshifterbyxboxscontentnw.shapeshifter_flee_spawn_egg": "Shapeshifter Flee Spawn Egg",
   "entity.theshapeshifterbyxboxscontentnw.shapeshifter_fake": "Shapeshifter On Wall Fake",
+  "entity.theshapeshifterbyxboxscontentnw.shapeshifter_watch": "Shapeshifter Watch",
   "subtitles.sound": "",
   "entity.theshapeshifterbyxboxscontentnw.shapeshifter_on_wall": "Shapeshifter On Wall",
   "item.theshapeshifterbyxboxscontentnw.shapeshifter_wolf_spawn_egg": "Shapeshifter Wolf Spawn Egg",
@@ -10,6 +11,7 @@
   "item.theshapeshifterbyxboxscontentnw.shapeshifter_killer_spawn_egg": "Shapeshifter Spawn Egg",
   "subtitles.sound2": "",
   "item.theshapeshifterbyxboxscontentnw.shapeshifter_on_wall_spawn_egg": "Shapeshifter On Wall Spawn Egg",
+  "item.theshapeshifterbyxboxscontentnw.shapeshifter_watch_spawn_egg": "Shapeshifter Watch Spawn Egg",
   "item.theshapeshifterbyxboxscontentnw.shapeshifter_fake_spawn_egg": "Shapeshifter On Wall Fake Spawn Egg",
   "entity.theshapeshifterbyxboxscontentnw.shapeshifter_flee": "Shapeshifter Flee"
 }
