--- a/src/main/resources/assets/theshapeshifterbyxboxscontentnw/lang/en_us.json
+++ b/src/main/resources/assets/theshapeshifterbyxboxscontentnw/lang/en_us.json
@@ -1,8 +1,7 @@
 {
-  "entity.theshapeshifterbyxboxscontentnw.shapeshifter_fake": "Shapeshifter On Wall Fake",
   "entity.theshapeshifterbyxboxscontentnw.shapeshifter_watch": "Shapeshifter Watch",
   "subtitles.sound": "",
-  "entity.theshapeshifterbyxboxscontentnw.shapeshifter_on_wall": "Shapeshifter On Wall",
+  "entity.theshapeshifterbyxboxscontentnw.shapeshifter_on_wall": "Shapeshifter Hidden",
   "item.theshapeshifterbyxboxscontentnw.shapeshifter_wolf_spawn_egg": "Shapeshifter Wolf Spawn Egg",
   "entity.theshapeshifterbyxboxscontentnw.shapeshifter_killer": "Shapeshifter",
   "entity.theshapeshifterbyxboxscontentnw.shapeshifter_wolf": "Shapeshifter Wolf",
@@ -10,8 +9,7 @@
   "item.theshapeshifterbyxboxscontentnw.shapeshifter_killer_spawn_egg": "Shapeshifter Spawn Egg",
   "subtitles.sound2": "",
   "item.theshapeshifterbyxboxscontentnw.shapeshifter_fleeing_spawn_egg": "Shapeshifter Fleeing Spawn Egg",
-  "item.theshapeshifterbyxboxscontentnw.shapeshifter_on_wall_spawn_egg": "Shapeshifter On Wall Spawn Egg",
+  "item.theshapeshifterbyxboxscontentnw.shapeshifter_on_wall_spawn_egg": "Shapeshifter Hidden Spawn Egg",
   "entity.theshapeshifterbyxboxscontentnw.shapeshifter_fleeing": "Shapeshifter Fleeing",
-  "item.theshapeshifterbyxboxscontentnw.shapeshifter_watch_spawn_egg": "Shapeshifter Watch Spawn Egg",
-  "item.theshapeshifterbyxboxscontentnw.shapeshifter_fake_spawn_egg": "Shapeshifter On Wall Fake Spawn Egg"
+  "item.theshapeshifterbyxboxscontentnw.shapeshifter_watch_spawn_egg": "Shapeshifter Watch Spawn Egg"
 }
